# Fetchit

./: README.md
fetchit/: README.md  cancer_result.csv  pyproject.toml  requirements.txt  skin.csv  vaccine.csv
fetchit/fetchit/: fetch_papers.py
