[project]
name = "fetchit"
version = "0.1.0"
description = "Fetch research papers from Pubmed"
authors = [
    {name = "Prithvi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "fetchit" }]

[tool.poetry.scripts]
get-papers-list = "fetchit.fetch_papers:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
